// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Pagination Few Pages 1`] = `
<div
  className="w-full flex justify-center"
>
  <ul
    className="flex gap-0 font-mono text-gray-500"
  >
    <li
      className="border-l border-t border-b rounded-tl-md rounded-bl-md hover:bg-gray-50 pointer-events-none text-gray-200 border-gray-100"
    >
      <a
        aria-disabled="true"
        aria-label="Previous page"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        rel="prev"
        role="button"
        tabIndex="0"
      >
        ←
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50 bg-purple bg-opacity-10 text-purple border border-purple"
    >
      <a
        aria-current="page"
        aria-label="Page 1 is your current page"
        className="px-2 py-0.5 min-w-[3ch] inline-block font-bold"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50"
    >
      <a
        aria-current={null}
        aria-label="Page 2"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50"
    >
      <a
        aria-current={null}
        aria-label="Page 3"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        3
      </a>
    </li>
    <li
      className="border-r border-t border-b rounded-tr-md rounded-br-md hover:bg-gray-50"
    >
      <a
        aria-disabled="false"
        aria-label="Next page"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        rel="next"
        role="button"
        tabIndex="0"
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI Elements/Pagination Many Pages 1`] = `
<div
  className="w-full flex justify-center"
>
  <ul
    className="flex gap-0 font-mono text-gray-500"
  >
    <li
      className="border-l border-t border-b rounded-tl-md rounded-bl-md hover:bg-gray-50 pointer-events-none text-gray-200 border-gray-100"
    >
      <a
        aria-disabled="true"
        aria-label="Previous page"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        rel="prev"
        role="button"
        tabIndex="0"
      >
        ←
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50 bg-purple bg-opacity-10 text-purple border border-purple"
    >
      <a
        aria-current="page"
        aria-label="Page 1 is your current page"
        className="px-2 py-0.5 min-w-[3ch] inline-block font-bold"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50"
    >
      <a
        aria-current={null}
        aria-label="Page 2"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50"
    >
      <a
        aria-current={null}
        aria-label="Page 3"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        3
      </a>
    </li>
    <li
      className="border-t border-b border-r pointer-events-none"
    >
      <a
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        ...
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50"
    >
      <a
        aria-current={null}
        aria-label="Page 35"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        35
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50"
    >
      <a
        aria-current={null}
        aria-label="Page 36"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        36
      </a>
    </li>
    <li
      className="text-center border-r border-t border-b border-gray-200 hover:bg-gray-50"
    >
      <a
        aria-current={null}
        aria-label="Page 37"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        37
      </a>
    </li>
    <li
      className="border-r border-t border-b rounded-tr-md rounded-br-md hover:bg-gray-50"
    >
      <a
        aria-disabled="false"
        aria-label="Next page"
        className="px-2 py-0.5 min-w-[3ch] inline-block"
        onClick={[Function]}
        onKeyPress={[Function]}
        rel="next"
        role="button"
        tabIndex="0"
      >
        →
      </a>
    </li>
  </ul>
</div>
`;
